# ATCS_group3

./: .gitignore  Bloommodel.py  LMmodel.py  README.md  Results_analysis.ipynb  config.py  dl2022_gpu.yml  env.yml  environment.yml  label_mapping.py  pipeline.py  prompt_generator.py  pyproject.toml  test.py  test.txt
ATCS/: Untitled.ipynb
code/: LLama_API.py  Llamini_api.py  Roberta_model.py  dataloader_file.py  dataloaders.py  eval_dataset.py  eval_dataset2.py  main_model.py  pipeline_file.py
dont_look/: dataloaders copy.py
job_logs/: slurm_output_install_package_11721362.out  slurm_output_install_package_11721401.out  slurm_output_install_package_11740385.out  slurm_output_install_package_11744161.out  slurm_output_install_package_11744162.out  slurm_output_install_package_11770985.out  slurm_output_train_11721313.out  slurm_output_train_11721366.out  slurm_output_train_11721467.out  slurm_output_train_11721479.out  slurm_output_train_11721485.out  slurm_output_train_11721813.out  slurm_output_train_11722515.out  slurm_output_train_11722567.out  slurm_output_train_11722623.out  slurm_output_train_11722626.out  slurm_output_train_11734858.out  slurm_output_train_11734871.out  slurm_output_train_11741226.out  slurm_output_train_11741233.out  slurm_output_train_11741301.out  slurm_output_train_11741341.out  slurm_output_train_11741342.out  slurm_output_train_11741357.out  slurm_output_train_11741431.out  slurm_output_train_11741901.out  slurm_output_train_11741954.out  slurm_output_train_11743122.out  slurm_output_train_11743130.out  slurm_output_train_11743131.out  (+157 more)
(+121 files in other folders)
