[tool.poetry]
name = "atcs-group3"
version = "0.1.0"
description = ""
authors = ["Amity Aharoni <aharoni.amittai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
pytorch-lightning = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
